# rust-code-analysis-python

./: .readthedocs.yaml  Cargo.toml  README.md  dev_requirements.txt  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: lib.rs  metrics.rs
src/backend/: comment.rs  metrics.rs  mod.rs
tests/: test_comment_removal.py  test_compute_metrics.py  test_metrics.py
