[build-system]
requires = ["maturin>=1.8.4", "patchelf>=0.17.2.2"]
build-backend = "maturin"

[project]
name = "rust-code-analysis-python"
version = "0.0.1"
description = "Python bindings for rust-code-analysis"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[tool.maturin]
features = ["pyo3/extension-module"]
